# echo-rs

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  main.go
.github/workflows/: docker.yml
src/: dashboard.html  health.rs  main.rs
