[package]
name = "echo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
axum = "0.7.9"
tokio = { version = "1.42.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
